--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,9 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    max-width: 100%;
+    min-width: 100%;
+    overflow-x: hidden;
 }
 
 a {
@@ -19,8 +22,4 @@ a {
   html {
     color-scheme: dark;
   }
-  /* body {
-    color: white;
-    background: black;
-  } */
 }
