--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,8 @@ body {
     max-width: 100%;
     min-width: 100%;
     overflow-x: hidden;
+    font-family: 'Inter Tight', sans-serif !important;
+    font-weight: 500 !important;
 }
 
 a {
@@ -24,4 +26,3 @@ a {
   }
 }
 
- 
