--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,7 +7,7 @@ body {
     max-width: 100%;
     min-width: 100%;
     overflow-x: hidden;
-    font-family: 'Inter Tight', sans-serif !important;
+    /* font-family: 'Inter Tight', sans-serif !important; */
     font-weight: 500 !important;
 }
 
