--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,13 +2,13 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Mona Sans', !important;
+  /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
     max-width: 100%;
     min-width: 100%;
     overflow-x: hidden;
-    /* font-family: 'Inter Tight', sans-serif !important; */
-    font-weight: 500 !important;
+    
 }
 
 a {
@@ -18,7 +18,16 @@ a {
 
 * {
   box-sizing: border-box;
+  font-family: 'Mona Sans', !important;
 }
+
+/* kbd {
+  font-size: 16px !important;
+}
+
+table {
+  font-size: 16px !important;
+} */
 
 @media (prefers-color-scheme: dark) {
   html {
