--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,9 +2,8 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: 'Mona Sans', !important;
-  /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     max-width: 100%;
     min-width: 100%;
     overflow-x: hidden;
@@ -35,9 +34,4 @@ table {
   }
 }
 
-@font-face {
-  font-family: 'Mona Sans !imprtant';
-  src: url("../public/font/Mona-Sans-Medium.woff2");
-  font-style: normal;
-}
 
