--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,9 +4,9 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-    max-width: 100%;
-    min-width: 100%;
-    overflow-x: hidden;    
+  max-width: 100%;
+  min-width: 100%;
+  overflow-x: hidden;
 }
 
 a {
@@ -61,3 +61,6 @@ a {
   padding-right: 1rem;
 }
 
+.recharts-brush-texts {
+  font-size: 12px;
+}
