--- a/styles/globals.css
+++ b/styles/globals.css
@@ -65,11 +65,12 @@ a {
   font-size: 12px;
 }
 
-/*.recharts-label {
-  font-size: 14px;
-}*/
+.recharts-label {
+  font-size: 12px;
+}
 
 .react-grid-placeholder {
   background-color: rgba(0, 0, 255, 0.2) !important;
   border: 2px dashed rgba(0, 0, 255, 0.8) !important;
+  border-radius: 12px !important;
 }
