--- a/styles/globals.css
+++ b/styles/globals.css
@@ -72,4 +72,5 @@ a {
 .react-grid-placeholder {
   background-color: rgba(0, 0, 255, 0.2) !important;
   border: 2px dashed rgba(0, 0, 255, 0.8) !important;
+  border-radius: 12px !important;
 }
