--- a/styles/globals.css
+++ b/styles/globals.css
@@ -61,9 +61,11 @@ a {
   padding-right: 1rem
 }
 
+/*
 .recharts-brush-texts {
   font-size: 12px;
 }
+*/
 
 .recharts-label {
   font-size: 12px;
@@ -73,4 +75,15 @@ a {
   background-color: rgba(0, 0, 255, 0.2) !important;
   border: 2px dashed rgba(0, 0, 255, 0.8) !important;
   border-radius: 12px !important;
+}
+
+.react-resizable-handle-e,
+.react-resizable-handle-w {
+  position: relative;
+  background-color: transparent;
+  width: 14px;
+  height: 100%;
+  cursor: ew-resize;
+  margin-left: 12px;
+  margin-right: 12px;
 }
